<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <TextView
        android:id="@+id/loginHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:text="@string/loginHeader"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textSerwer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginHeader"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/serwer"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editSerwer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textSerwer"
        android:layout_centerHorizontal="true"
        android:ems="14"
        android:hint="@string/serwerHint"
        android:inputType="none" />

    <TextView
        android:id="@+id/textBazaDanych"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editSerwer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/bazaDanych"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spinnerBazaDanych"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textBazaDanych"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@id/editSerwer"
        android:layout_alignRight="@id/editSerwer" />

    <TextView
        android:id="@+id/textUzytkownik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textBazaDanych"
        android:layout_below="@+id/spinnerBazaDanych"
        android:layout_marginTop="8dp"
        android:text="@string/uzytkownik"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editUzytkownik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textUzytkownik"
        android:layout_centerHorizontal="true"
        android:ems="14" />

    <TextView
        android:id="@+id/textHaslo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/editUzytkownik"
        android:layout_marginTop="8dp"
        android:text="@string/textHaslo"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editHaslo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textHaslo"
        android:layout_centerHorizontal="true"
        android:ems="14" />

    <Button
        android:id="@+id/buttonAnuluj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editHaslo"
        android:layout_below="@+id/editHaslo"
        android:layout_marginTop="21dp"
        android:text="@string/anuluj"
        android:width="128dp" />

    <Button
        android:id="@+id/buttonOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonAnuluj"
        android:layout_alignRight="@+id/editHaslo"
        android:text="@string/ok"
        android:width="128dp" />
    
</RelativeLayout>