<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/textView1"
        style="@style/TextViewHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strefa_header" />

    <View
        android:id="@+id/view1"
        style="@style/DividingLine"
        android:layout_width="wrap_content" />

    <CheckBox
        android:id="@+id/checkboxA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="Strefa A" />

    <CheckBox
        android:id="@+id/checkboxB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Strefa B" />

    <CheckBox
        android:id="@+id/checkboxC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Strefa C" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    <Button
        android:id="@+id/buttonOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/ok"
        android:width="128dp" />

    <Button
        android:id="@+id/buttonAnuluj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/anuluj"
        android:width="128dp" />
        
    </RelativeLayout>

</LinearLayout>