<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <RelativeLayout
                android:id="@+id/chooseProductTab"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_horizontal" >

                <EditText
                    android:id="@+id/textProductID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:ems="10"
                    android:inputType="text" />

                <ListView
                    android:id="@+id/listProducts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/buttonOk"
                    android:layout_alignParentLeft="true"
                    android:paddingLeft="6dp"
                    android:layout_below="@+id/textProductID"
                    android:layout_marginTop="12dp" >
                </ListView>

                <Button
                    android:id="@+id/buttonOk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/button_next" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/productDetailsTab"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <TextView
                    android:id="@+id/label_price_ind"
                    style="@style/TextViewHeader"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/label_price" />

                <TextView
                    android:id="@+id/txt_price"
                    style="@style/TextViewInfo"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/label_price_ind"
                    android:paddingLeft="100dp"
                    android:text="34.99" />

                <TextView
                    style="@style/TextViewInfo"
                    android:layout_alignTop="@id/txt_price"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@id/txt_price"
                    android:text="PLN" />

                <View
                    android:id="@+id/first_line"
                    style="@style/DividingLine"
                    android:layout_below="@id/txt_price" />

                <TextView
                    android:id="@+id/label_quantity_ind"
                    style="@style/TextViewHeader"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/first_line"
                    android:text="@string/label_quantity" />

                <EditText
                    android:id="@+id/txt_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/label_quantity_ind"
                    android:layout_marginLeft="100dp"
                    android:inputType="number" />

                <View
                    android:id="@+id/second_line"
                    style="@style/DividingLine"
                    android:layout_below="@id/txt_quantity" />

                <TextView
                    android:id="@+id/label_unit_ind"
                    style="@style/TextViewHeader"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/second_line"
                    android:text="@string/label_unit" />

                <TextView
                    style="@style/TextViewInfo"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/label_unit_ind"
                    android:paddingLeft="100dp"
                    android:text="SZT" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/button_next" />
            </RelativeLayout>
        </FrameLayout>
    </LinearLayout>

</TabHost>